--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@emotion/styled": "^11.10.6",
     "@fontsource/roboto": "^4.5.8",
     "@hookform/resolvers": "^2.9.11",
+    "@react-three/drei": "^9.57.0",
+    "@react-three/fiber": "^8.11.8",
     "@reduxjs/toolkit": "^1.9.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -23,6 +25,8 @@
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
+    "three": "^0.150.1",
+    "three-stdlib": "^2.21.8",
     "web-vitals": "^2.1.4",
     "yup": "^1.0.2"
   },
