--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
+    "framer-motion": "^10.2.2",
     "npm": "^9.5.1",
     "pure-react-carousel": "^1.30.1",
     "react": "^18.2.0",
