--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@fontsource/roboto": "^4.5.8",
+    "@headlessui/react": "^1.7.13",
     "@hookform/resolvers": "^2.9.11",
     "@react-three/drei": "^9.57.0",
     "@react-three/fiber": "^8.11.8",
