--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
+    "chart.js": "^4.2.1",
     "framer-motion": "^10.2.2",
     "npm": "^9.5.1",
     "pure-react-carousel": "^1.30.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.43.3",
