--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "styled-components": "^5.3.6",
     "three": "^0.150.1",
     "three-stdlib": "^2.21.8",
+    "three-stl-loader": "^1.0.6",
     "web-vitals": "^2.1.4",
     "yup": "^1.0.2"
   },
